027-nats/ep19/ex05/nats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-cluster
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nats
  template:
    # below is from nats-pod.yml
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats
          command: ["nats-server"]
          args: ["-c", "/etc/nats-server.conf", "--name", "$(POD_NAME)"]
          volumeMounts:
            - name: nats-config-volume
              mountPath: /etc/nats-server.conf
          ports:
            - containerPort: 4222
              name: client-port
            - containerPort: 6222
              name: route-port
