027-nats/ep19/ex05/nats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
      name: client-port
    - protocol: TCP
      port: 6222
      targetPort: 6222
      name: route-port
